# raccoon

./: .gitignore  .nojekyll  2ply_label_generation.html  CLAUDE.md  LICENSE  Makefile  README.md  architecture.html  gcp_guide.html  goal.md  index.html  mcts_explained.html  pretraining_analysis.html  pyproject.toml  robots.txt  search.json  sitemap.xml  training_analysis.html  training_parameters.html
analysis/: training_analysis.qmd
docs/: .gitignore  2ply_label_generation.md  _quarto.yml  architecture.md  gcp_guide.md  index.qmd  mcts_explained.md  objects.json  plan.md  pretraining_analysis.qmd  training_analysis.qmd  training_parameters.md  training_research.qmd
logs/: gnubg_eval_20260407_075041.txt  gnubg_eval_20260407_130659.txt  gnubg_eval_20260408_052708.txt  gnubg_eval_20260410_051307.txt
reference/: env.actions.html  env.encoder.html  env.game_wrapper.html  eval.arena.html  eval.gnubg_harness.html  index.html  model.network.html  protocol.rgp.html  search.mcts.html  train.coach.html  train.replay_buffer.html  train.self_play.html
scripts/: bench_gnubg_ply.py  download_wildbg.sh  error_profile.py  eval_errorrate.py  eval_gnubg.py  eval_gnubg0.py  evaluate.py  gen_gnubg_selfplay.py  merge_caches.py  pipeline_budget.py  play.py  pretrain.py  pretrain_policy.py  reencode_cache.py  resume_training.sh  run_feat_grid.sh  setup_vm.sh  synthesize_gnubg_dataset.py  synthesize_ondist_dataset.py  synthesize_policy_dataset.py  train.py  train_distill.py  train_td.py  watch_pipeline.sh  watch_vm.sh
tests/: test_actions.py  test_bganalyzed.py  test_coach.py  (+17 more)
(+168 files in other folders)
