[project]
name = "raccoon"
version = "0.1.0"
description = "Backgammon AI using AlphaZero-style training"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "open-spiel",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
